Update file paths for styles, images, and scripts; add 'About Us' section to index.html.

--- a/brand-guide.html
+++ b/brand-guide.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Heedful - Brand Guide</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -175,7 +175,7 @@
             <a href="index.html" class="back-link">← Back to Website</a>
             
             <div class="brand-header">
-                <img src="logo.svg" alt="The Heedful Logo" style="width: 120px; height: 120px; margin-bottom: 2rem;">
+                <img src="assets/images/logo.svg" alt="The Heedful Logo" style="width: 120px; height: 120px; margin-bottom: 2rem;">
                 <h1 class="section-title">The Heedful</h1>
                 <p class="section-subtitle">Brand Guidelines & Visual Identity</p>
                 <p style="color: var(--text-muted); margin-top: 1rem;">Thoughtful Innovation • Purposeful Growth</p>
@@ -207,17 +207,17 @@
                 
                 <div class="logo-showcase">
                     <div class="logo-variant">
-                        <img src="logo.svg" alt="Primary Logo">
+                        <img src="assets/images/logo.svg" alt="Primary Logo">
                         <h4 style="color: var(--text-white); margin-bottom: 0.5rem;">Primary Logo</h4>
                         <p style="color: var(--text-muted); font-size: 0.875rem;">Use on dark backgrounds</p>
                     </div>
                     <div class="logo-variant" style="background: rgba(255, 255, 255, 0.9);">
-                        <img src="logo.svg" alt="Logo on Light" style="filter: brightness(0.8);">
+                        <img src="assets/images/logo.svg" alt="Logo on Light" style="filter: brightness(0.8);">
                         <h4 style="color: #1a1d3a; margin-bottom: 0.5rem;">On Light Backgrounds</h4>
                         <p style="color: #64748b; font-size: 0.875rem;">Adjust opacity for visibility</p>
                     </div>
                     <div class="logo-variant">
-                        <img src="logo.svg" alt="Small Logo" style="width: 40px; height: 40px;">
+                        <img src="assets/images/logo.svg" alt="Small Logo" style="width: 40px; height: 40px;">
                         <h4 style="color: var(--text-white); margin-bottom: 0.5rem;">Small Size</h4>
                         <p style="color: var(--text-muted); font-size: 0.875rem;">Minimum 24px width</p>
                     </div>
