--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Heedful - Thoughtful Innovation, Purposeful Growth</title>
     <meta name="description" content="Where ideas meet impact. Driving purposeful innovation, building technologies that empower people, and shaping a future guided by vision and care.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="logo.svg">
+    <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="logo.svg" alt="The Heedful Logo" class="logo-icon">
+                                 <img src="assets/images/logo.svg" alt="The Heedful Logo" class="logo-icon">
                 <span class="logo-text">The Heedful</span>
             </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#about" class="nav-link">About</a>
+                <a href="#about-us" class="nav-link">About Us</a>
                 <a href="#services" class="nav-link">Services</a>
                 <a href="#vision" class="nav-link">Vision</a>
                 <a href="#contact" class="nav-link">Contact</a>
@@ -42,7 +43,7 @@
         </div>
         <div class="hero-content">
             <div class="hero-logo">
-                <img src="logo.svg" alt="The Heedful Logo" class="hero-logo-img">
+                <img src="assets/images/logo.svg" alt="The Heedful Logo" class="hero-logo-img">
             </div>
             <h1 class="hero-title">The Heedful</h1>
             <p class="hero-subtitle">Thoughtful Innovation • Purposeful Growth</p>
@@ -80,6 +81,42 @@
                         <div class="story-icon">🚀</div>
                         <h3>The Vision</h3>
                         <p>Today, we're building an all-purpose technology company that doesn't just innovate for innovation's sake, but creates meaningful solutions across industries - from software to healthcare, from games to enterprise solutions.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us Section (Company) -->
+    <section id="about-us" class="about-us">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">About Us</h2>
+                <p class="section-subtitle">Who we are and how we work</p>
+            </div>
+            <div class="about-us-grid">
+                <div class="about-us-card">
+                    <h3 style="margin-bottom: 1rem;">The Heedful in Practice</h3>
+                    <p style="color: var(--text-muted); line-height: 1.8; margin-bottom: 1rem;">We are a technology studio built on curiosity, craft, and care. We design and ship software that solves real problems, with a focus on quality and long-term impact. We collaborate closely with founders, organizations, and communities to turn ideas into useful products.</p>
+                    <p style="color: var(--text-muted); line-height: 1.8;">Our work spans web and mobile apps, platforms, games, and research prototypes. Each engagement follows a simple approach: understand deeply, design clearly, build reliably, and iterate thoughtfully.</p>
+                    <div class="kpis">
+                        <div class="kpi"><h4>Mindful</h4><p>We measure twice, cut once</p></div>
+                        <div class="kpi"><h4>Purpose</h4><p>Every feature serves a goal</p></div>
+                        <div class="kpi"><h4>Quality</h4><p>Craft over shortcuts</p></div>
+                        <div class="kpi"><h4>Growth</h4><p>We learn and improve</p></div>
+                    </div>
+                </div>
+                <div class="about-us-card">
+                    <h3 style="margin-bottom: 1rem;">What We Value</h3>
+                    <ul style="color: var(--text-muted); line-height: 1.8; list-style: none; padding-left: 0;">
+                        <li>• Clear communication and respectful teamwork</li>
+                        <li>• Privacy, security, and responsible technology</li>
+                        <li>• Accessible, inclusive digital experiences</li>
+                        <li>• Sustainable, maintainable engineering</li>
+                    </ul>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="#contact" class="btn btn-primary">Work With Us</a>
+                        <a href="#services" class="btn btn-secondary" style="margin-left: .5rem;">See Services</a>
                     </div>
                 </div>
             </div>
@@ -307,7 +344,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="logo.svg" alt="The Heedful Logo" class="footer-logo">
+                    <img src="assets/images/logo.svg" alt="The Heedful Logo" class="footer-logo">
                     <h3>The Heedful</h3>
                     <p>Thoughtful Innovation • Purposeful Growth</p>
                 </div>
@@ -339,6 +376,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
