Update contact information in index.html, enhance CSS for responsive design, and improve mobile navigation functionality in script.js.

--- a/index.html
+++ b/index.html
@@ -295,21 +295,21 @@
                             <div class="method-icon">📧</div>
                             <div class="method-text">
                                 <h4>Email</h4>
-                                <p>hello@theheedful.com</p>
+                                <a href="mailto:thvenge@gmail.com">thvenge@gmail.com</a>
                             </div>
                         </div>
                         <div class="contact-method">
-                            <div class="method-icon">💼</div>
+                            <div class="method-icon">📘</div>
                             <div class="method-text">
-                                <h4>Business</h4>
-                                <p>partnerships@theheedful.com</p>
+                                <h4>Facebook</h4>
+                                <a href="https://www.facebook.com/TheHeedfulPH" target="_blank">www.facebook.com/TheHeedfulPH</a>
                             </div>
                         </div>
                         <div class="contact-method">
-                            <div class="method-icon">🌐</div>
+                            <div class="method-icon">💻</div>
                             <div class="method-text">
-                                <h4>Social</h4>
-                                <p>Follow us for updates and insights</p>
+                                <h4>GitHub</h4>
+                                <a href="https://www.github.com/VengeTH" target="_blank">www.github.com/VengeTH</a>
                             </div>
                         </div>
                     </div>
@@ -363,9 +363,9 @@
                     </div>
                     <div class="footer-section">
                         <h4>Connect</h4>
-                        <a href="#">LinkedIn</a>
-                        <a href="#">Twitter</a>
-                        <a href="#">GitHub</a>
+                        <a href="https://www.facebook.com/TheHeedfulPH" target="_blank">Facebook</a>
+                        <a href="https://www.github.com/VengeTH" target="_blank">GitHub</a>
+                        <a href="mailto:thvenge@gmail.com">Email</a>
                     </div>
                 </div>
             </div>
