Add 'Team' link to navigation and implement styles for team page layout and member cards

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a href="#services" class="nav-link">Services</a>
                 <a href="#vision" class="nav-link">Vision</a>
                 <a href="#contact" class="nav-link">Contact</a>
+                <a href="team.html" class="nav-link">Team</a>
                 <a href="brand-guide.html" class="nav-link">Brand Guide</a>
             </div>
             <div class="nav-toggle">
