Implement core values layout improvements in brand-guide.html, enhance value card styles in styles.css, and update index.html with new value icons and descriptions for better visual appeal and responsiveness.

--- a/index.html
+++ b/index.html
@@ -324,18 +324,30 @@
             </div>
             <div class="values-grid">
                 <div class="value-card">
+                    <div class="value-icon-wrapper">
+                        <div class="value-icon">🎯</div>
+                    </div>
                     <h3>Heedful</h3>
                     <p>We are mindful and careful in our approach, considering the long-term impact of our innovations on people and society.</p>
                 </div>
                 <div class="value-card">
+                    <div class="value-icon-wrapper">
+                        <div class="value-icon">🎪</div>
+                    </div>
                     <h3>Purposeful</h3>
                     <p>Every project we undertake serves a meaningful purpose, addressing real problems and creating genuine value.</p>
                 </div>
                 <div class="value-card">
+                    <div class="value-icon-wrapper">
+                        <div class="value-icon">💡</div>
+                    </div>
                     <h3>Innovative</h3>
                     <p>We push boundaries and explore new possibilities while staying grounded in practical, implementable solutions.</p>
                 </div>
                 <div class="value-card">
+                    <div class="value-icon-wrapper">
+                        <div class="value-icon">🚀</div>
+                    </div>
                     <h3>Empowering</h3>
                     <p>Our technologies are designed to empower people, enhance capabilities, and create opportunities for growth.</p>
                 </div>
