Add team navigation section and floating quick navigation for improved user experience; update styles for responsiveness and visual appeal in team.html and styles.css.

--- a/team.html
+++ b/team.html
@@ -300,6 +300,32 @@
         </div>
     </section>
 
+    <!-- Navigation Section -->
+    <section class="team-navigation">
+        <div class="container">
+            <div class="nav-cards">
+                <div class="nav-card">
+                    <div class="nav-icon">🏠</div>
+                    <h3>Back to Home</h3>
+                    <p>Explore our main website and learn about our services</p>
+                    <a href="index.html" class="btn btn-primary">Go Home</a>
+                </div>
+                <div class="nav-card">
+                    <div class="nav-icon">🎨</div>
+                    <h3>Brand Guide</h3>
+                    <p>View our complete brand guidelines and design system</p>
+                    <a href="brand-guide.html" class="btn btn-secondary">View Brand Guide</a>
+                </div>
+                <div class="nav-card">
+                    <div class="nav-icon">💼</div>
+                    <h3>Our Services</h3>
+                    <p>Discover what we do and how we can help your business</p>
+                    <a href="index.html#services" class="btn btn-secondary">View Services</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -338,6 +364,13 @@
         </div>
     </footer>
     </main>
+
+    <!-- Floating Quick Nav (mobile) -->
+    <div class="floating-quick-nav" aria-label="Quick navigation">
+        <a href="index.html" class="quick-nav-btn" aria-label="Home">🏠<span>Home</span></a>
+        <a href="index.html#services" class="quick-nav-btn" aria-label="Services">💼<span>Services</span></a>
+        <a href="brand-guide.html" class="quick-nav-btn" aria-label="Brand Guide">🎨<span>Brand</span></a>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
