Revise index.html to enhance the company description and vision, emphasizing a mission to excel across various industries. Add new aspirations for Clothing & Apparel and update existing content for clarity and impact.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Heedful - Thoughtful Innovation, Purposeful Growth</title>
-    <meta name="description" content="Where ideas meet impact. Driving purposeful innovation, building technologies that empower people, and shaping a future guided by vision and care.">
+    <meta name="description" content="Where ideas meet intention. Our mission is to be a top company across all industries—advancing software, healthcare, automotive, clothing & apparel, and virtually any specialization with thoughtful innovation and purposeful growth.">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +51,7 @@
             </div>
             <h1 class="hero-title">The Heedful</h1>
             <p class="hero-subtitle">Thoughtful Innovation • Purposeful Growth</p>
-            <p class="hero-description">A technology startup focused on software development and digital solutions. We build with vision—creating today's innovations while architecting tomorrow's possibilities across future industries.</p>
+            <p class="hero-description">A technology startup focused on software development and digital solutions. We build with vision—creating today's innovations while architecting tomorrow's possibilities across all industries, with a mission to become a top company in virtually any specialization or industry.</p>
             <div class="hero-buttons">
                 <a href="#about" class="btn btn-primary">Discover Our Story</a>
                 <a href="#services" class="btn btn-secondary">Explore Services</a>
@@ -84,7 +84,7 @@
                     <div class="story-card">
                         <div class="story-icon">🚀</div>
                         <h3>The Vision</h3>
-                        <p>Today, we're building a technology startup focused on software and digital solutions, with the long-term vision of expanding into healthcare, automotive, and other industries as we grow and succeed.</p>
+                        <p>Today, we're building a technology startup focused on software and digital solutions—with a clear mission to become one of the top companies across virtually any industry or specialization, expanding beyond technology into healthcare, automotive, clothing & apparel, and any other industry as we grow and succeed.</p>
                     </div>
                 </div>
             </div>
@@ -256,6 +256,12 @@
                     <div class="aspiration-status">Future Division</div>
                 </div>
                 <div class="aspiration-card">
+                    <div class="aspiration-icon">👗</div>
+                    <h3>Clothing & Apparel</h3>
+                    <p>Design, production, and smart retail for apparel—where brand, function, and technology meet.</p>
+                    <div class="aspiration-status">Future Division</div>
+                </div>
+                <div class="aspiration-card">
                     <div class="aspiration-icon">🌍</div>
                     <h3>Sustainable Technology</h3>
                     <p>Environmental solutions, green technology, and sustainable innovations for a better planet.</p>
@@ -271,7 +277,7 @@
             <div class="vision-content">
                 <div class="vision-text">
                     <h2 class="section-title">Our Long-term Vision</h2>
-                    <p class="vision-description">We believe technology should serve humanity's greatest needs. Starting with software and digital solutions, our vision extends far beyond code to transform multiple industries as we grow.</p>
+                    <p class="vision-description">We believe technology should serve humanity's greatest needs. Our mission is to become a top company across virtually any industry or specialization—starting with software and expanding into healthcare, automotive, clothing & apparel, and any other industry—guided by thoughtful innovation and purposeful growth.</p>
                     <div class="vision-goals">
                         <div class="goal-item">
                             <div class="goal-icon">🏥</div>
@@ -292,6 +298,13 @@
                             <div class="goal-text">
                                 <h4>Sustainable Solutions</h4>
                                 <p>Creating technology that not only advances business but also contributes to environmental and social sustainability.</p>
+                            </div>
+                        </div>
+                        <div class="goal-item">
+                            <div class="goal-icon">👗</div>
+                            <div class="goal-text">
+                                <h4>Clothing & Apparel</h4>
+                                <p>Developing our own clothing lines and smart retail platforms that blend design, function, and technology.</p>
                             </div>
                         </div>
                         <div class="goal-item">
